--- a/lab-5/index.html
+++ b/lab-5/index.html
@@ -5,9 +5,9 @@
 <meta name="description" content="Laboratory work frontend KPI">
 <meta name="keywords" content="HTML, CSS, JavaScript">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="node_modules/w3css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
 <title>Заяць О.В., ЗПІ-зп82</title>
 <body>
