--- a/lab-6/index.html
+++ b/lab-6/index.html
@@ -19,8 +19,8 @@
 
 <div class="lab-6-container">
     <h2 class="w3-yellow" id="row-first" onclick="toggleFirstNThird()"> Доступ до властивостей і методів </h2>
-    <p class="w3-text-red" id="row-second" onclick="toggleSecond()"> Прізвище та ім’я виконавця (Колекція all) </p>
-    <div class="w3-yellow" id="row-third"> Варіант, група (Метод getElementById())</div>
+    <p class="w3-text-red" id="row-second" onclick="toggleSecond()"> Заяць Олег(Колекція all) </p>
+    <div class="w3-yellow" id="row-third"> Варіант 5, група ЗПІ-зп-81 (Метод getElementById())</div>
     <div id="row-fourth" class="w3-padding-64">
         <figure>
             <img src="assets/lenin.JPG" alt="lenin">
