--- a/lab-7/index.html
+++ b/lab-7/index.html
@@ -92,6 +92,8 @@
             </div>
         </div>
 
+        <input type="color" id="favcolor" name="favcolor" value="#ff0000" hidden>
+
         <button class="w3-button w3-block w3-section w3-green w3-ripple w3-padding" id="studentSubmit" onclick="submitForm(event)">
             Показати
         </button>
@@ -120,6 +122,69 @@
 
         </div>
     </div>
+    <div class="w3-container">
+
+        <h2>Таблиця Варіант 5</h2>
+        <div class="w3-responsive">
+            <table class="w3-table-all">
+                <tr>
+                    <th>First</th>
+                    <th>Second</th>
+                    <th>Third</th>
+                    <th>Fourth</th>
+                    <th>Fifth</th>
+                    <th>Last</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>14</td>
+                    <td>15</td>
+                    <td>16</td>
+                    <td>17</td>
+                    <td>18</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td>20</td>
+                    <td>21</td>
+                    <td>22</td>
+                    <td>23</td>
+                    <td>24</td>
+                </tr>
+                <tr>
+                    <td>25</td>
+                    <td>26</td>
+                    <td>27</td>
+                    <td>28</td>
+                    <td>29</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>31</td>
+                    <td>32</td>
+                    <td>33</td>
+                    <td>34</td>
+                    <td>35</td>
+                    <td>36</td>
+                </tr>
+            </table>
+        </div>
 </div>
 
 <script src="index.js"></script>
