--- a/lab-7/index.html
+++ b/lab-7/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-                <button onclick="document.getElementById('id01').style.display='none'" type="button"
+                <button onclick="document.getElementById('id01').style.display='none'" type="submit"
                         class="w3-button w3-red">Назад
                 </button>
             </div>
